Fixed product plan title and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,11 @@ button {
     cursor: pointer;
 }
 
+input[type="radio"] {
+    width: 20px;
+    height: 20px;
+}
+
 hr {
     width: 20%;
     border: 1px solid lightgray;
@@ -75,7 +80,7 @@ h1 {
 }
 
 h3 {
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     font-weight: 700;
 }
 
@@ -225,6 +230,10 @@ h6 {
 /* Plan Products */
 .purchase-plans {
     margin-top: 5rem;
+}
+
+.input-wrapper {
+    margin-top: 4rem;
 }
 
 .plans-wrapper {
